# help-desk-server

./: .dockerignore  .gitignore  Cargo.toml  README.md  app.toml.example  diesel.toml  docker-compose.yaml
cmd/: Cargo.toml
cmd/src/: agent_rest.rs  error.rs  lib.rs  line_webhook.rs  main.rs
cmd/src/job/: inquiry_incoming_event.rs  mod.rs  search.rs
config/agent-rest/: Cargo.toml
config/agent-rest/src/: args.rs  config.rs  toml.rs
config/agent-rest/tests/: mod.rs  test_app.toml
data/cache/: Cargo.toml
data/cache/src/: conn.rs  error.rs  keys.rs  lib.rs  pool.rs
data/cache/src/adapters/: agent_access_token.rs  auth_agent_scopes.rs  commands.rs  health_check.rs  login_blocked_by_ip.rs  login_blocked_by_username.rs  login_failed_by_ip.rs  login_failed_by_username.rs  mod.rs  reset_password_token.rs
data/database/: Cargo.toml
data/database/src/: conn.rs  error.rs  lib.rs  pool.rs  schema.rs
data/database/src/adapters/: agent.rs  agent_role.rs  faq_category.rs  faq_category_content.rs  faq_category_item.rs  faq_item.rs  faq_item_content.rs  faq_settings.rs  file.rs  group.rs  group_member.rs  group_role.rs  health_check.rs  inquiry_channel.rs  inquiry_contact.rs  inquiry_contact_channel.rs  inquiry_message.rs  inquiry_settings.rs  inquiry_thread.rs  mod.rs  role.rs  role_for_group.rs  role_scope.rs  workspace.rs
data/database/src/entities/: agent.rs  agent_role.rs  faq_category.rs  faq_category_content.rs  faq_category_item.rs  faq_item.rs  faq_item_content.rs  faq_settings.rs  file.rs  group.rs  group_member.rs  group_role.rs  inquiry_channel.rs  inquiry_contact.rs  inquiry_contact_channel.rs  inquiry_message.rs  inquiry_settings.rs  inquiry_thread.rs  mod.rs  role.rs  role_for_group.rs  role_scope.rs  workspace.rs
data/line/: Cargo.toml
data/line/src/: error.rs  lib.rs
data/line/src/client/: client.rs  get_profile.rs  get_webhook_endpoint.rs  mod.rs  send_push_message.rs  test_webhook_endpoint.rs  url.rs
data/line/src/events/: account_link.rs  beacon.rs  follow.rs  join.rs  leave.rs  member.rs  member_join.rs  member_leave.rs  mod.rs  postback.rs  source.rs  things.rs  unfollow.rs  unsend.rs  video_play_complete.rs
data/line/src/events/messages/: audio_message.rs  content_provider.rs  emoji.rs  file_message.rs  image_message.rs  location_message.rs  mention.rs  mod.rs  sticker_message.rs  text_message.rs  video_message.rs
data/line/src/messages/: audio_message.rs  flex_message.rs  image_map_message.rs  image_message.rs  location_message.rs  mod.rs  sticker_message.rs  template_message.rs  text_message.rs  video_message.rs
data/line/src/objects/: action.rs  profile.rs
data/line/src/objects/narrowcast/: filter.rs  limit.rs  recipient.rs
data/search/: Cargo.toml
data/search/src/: client.rs  error.rs  lib.rs
data/search/src/adapters/: faq_item.rs  faq_item_content.rs  health_check.rs  inquiry_contact.rs  inquiry_message.rs  mod.rs  public_faq_item.rs
data/search/src/entities/: faq_item.rs  faq_item_content.rs  inquiry_contact.rs  inquiry_message.rs  mod.rs  public_faq_item.rs
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/model/: file.rs  ids.rs  jwt.rs  mod.rs  names.rs  role.rs  role_for_group.rs  workspace.rs
domain/src/model/agent/: agent.rs  agent_role.rs  mod.rs
domain/src/model/common/: content_locale.rs  email.rs  hashed_password.rs  locale.rs  memo.rs  mime_type.rs  mod.rs  paging_result.rs  scope.rs  scope_for_group.rs  slug.rs  url.rs
domain/src/model/common/rte/: block_type.rs  content_block.rs  content_state.rs  direction.rs  editor_state.rs  element_format_type.rs  entity.rs  entity_mutability.rs  entity_range.rs  entity_type.rs  indent.rs  inline_style_range.rs  inline_style_type.rs  mod.rs  nodes.rs  version.rs
domain/src/model/faq/: faq_category.rs  faq_category_content.rs  faq_category_item.rs  faq_category_title.rs  faq_item.rs  faq_item_content.rs  faq_item_title.rs  faq_settings.rs  mod.rs
domain/src/model/group/: group.rs  group_description.rs  group_member.rs  group_role.rs  mod.rs
domain/src/model/inquiry/: inquiry_contact.rs  inquiry_contact_channel.rs  inquiry_incoming_event.rs  inquiry_settings.rs  mod.rs
domain/src/model/inquiry/inquiry_channel/: mod.rs
domain/src/model/inquiry/inquiry_message/: inquiry_message_speaker.rs  mod.rs
domain/src/model/inquiry/inquiry_thread/: inquiry_thread_status.rs  inquiry_thread_subject.rs  mod.rs
domain/src/repository/: agent.rs  agent_login.rs  faq.rs  file.rs  group.rs  line.rs  mod.rs  role.rs  role_for_group.rs  workspace.rs
domain/src/repository/inquiry/: job.rs  mod.rs
domain/src/repository/search/: faq.rs  inquiry.rs  mod.rs  public_faq.rs
domain/src/use_case/: get_workspace.rs  init_workspace.rs  mod.rs
domain/src/use_case/agent/: change_password.rs  get_scopes.rs  login.rs  logout.rs  mod.rs  update_profile.rs
domain/src/use_case/faq/: get_settings.rs  mod.rs  update_settings.rs
domain/src/use_case/faq/item/: get.rs  (+5 more)
domain/src/use_case/inquiry/: mod.rs
infrastructure/: Cargo.toml
infrastructure/src/repository/: agent.rs  agent_login.rs  faq.rs  file.rs  group.rs  line.rs  mod.rs  role.rs  role_for_group.rs  workspace.rs
infrastructure/src/repository/inquiry/: job.rs  mod.rs
infrastructure/src/repository/search/: inquiry.rs
job/: Cargo.toml
job/src/: config.rs  error.rs  lib.rs
job/src/executor/: inquiry_incoming_event.rs  mod.rs  search.rs
server/agent-rest/: Cargo.toml
server/agent-rest/src/: config.rs  constants.rs  error.rs  lib.rs
server/agent-rest/src/endpoints/: health_check.rs  mod.rs
server/agent-rest/src/request_parser/: auth.rs  locale.rs  mod.rs
server/agent-rest/src/schema/: agent.rs  agent_access_token.rs  content_locale.rs  faq_category.rs  faq_category_content.rs  faq_category_item.rs  faq_item.rs  faq_item_content.rs  faq_settings.rs  inquiry_settings.rs  mod.rs  paging_result.rs  scope.rs  workspace.rs
server/line-webhook/: Cargo.toml
server/line-webhook/src/: config.rs  error.rs  lib.rs  request_parser.rs
server/line-webhook/src/endpoints/: events.rs  health_check.rs  mod.rs
(+123 files in other folders)
