[workspace]
resolver = "2"

members = [
    "cmd",
    "config/agent-rest",
    "config/line-webhook",
    "config/job",
    "server/agent-rest",
    "server/line-webhook",
    "job",
    "infrastructure",
    "domain",
    "data/cache",
    "data/database",
    "data/line",
    "data/queue",
    "data/search",
]

[workspace.package]
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
edition = "2021"
homepage = "https://kumano-te.com/"
license = "MIT"
publish = false
repository = "https://github.com/kumanote/help-desk-server"
rust-version = "1.67.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
agent-rest-config = { path = "config/agent-rest" }
line-webhook-config = { path = "config/line-webhook" }
job-config = { path = "config/job" }
agent-rest-server = { path = "server/agent-rest" }
line-webhook-server = { path = "server/line-webhook" }
job = { path = "job" }
infrastructure = { path = "infrastructure" }
domain = { path = "domain" }
cache = { path = "data/cache" }
database = { path = "data/database" }
line = { path = "data/line" }
queue = { path = "data/queue" }
search = { path = "data/search" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
anyhow = { version = "1.0.69", features = ["backtrace"] }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
toml = "0.7.2"
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures = { version = "0.3.26" }
tokio = { version = "1.26.0", features = ["full"] }
once_cell = "1.17.1"
ulid = "1.0.0"
validator = { version = "0.16.0", features = ["derive", "phone"] }
regex = "1.7.1"
unicode-segmentation = "1.10.1"
pbkdf2 = { version = "0.12.1", features = ["simple"] }
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"
jsonwebtoken = "8.2.0"
diesel = { version = "2.0.3", features = ["mysql", "chrono", "r2d2", "serde_json"] }
redis = { version = "0.22.3", features = ["r2d2"] }
nats = { version = "0.24.0" }
meilisearch-sdk = { version = "0.22.0" }
r2d2 = "0.8.10"
axum = { version = "0.6.10", features = ["headers", "multipart", "macros"] }
axum-client-ip = "0.4.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
url = "2.3.1"
internationalization = "0.0.3"
clap = { version = "4.1.8", features = ["cargo", "derive"] }
logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }


[profile.dev]
debug = true

[profile.release]
debug = false

[profile.bench]
debug = false
