[package]
name = "help-desk-server"
version = "0.1.0"
# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# workspace members
agent-rest-config = { workspace = true }
agent-rest-server = { workspace = true }
job-config = { workspace = true }
job = { workspace = true }

# external libraries
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
