[package]
name = "domain"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
repository = "https://github.com/kumanote/help-desk-server"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
chrono = "0.4.23"
ulid = "1.0.0"
validator = { version = "0.16", features = ["derive", "phone"] }
regex = "1.7.0"
unicode-segmentation = "1.10.0"
pbkdf2 = "0.11.0"
jsonwebtoken = "8.2.0"

logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }

cache = { path = "../data/cache" }
database = { path = "../data/database" }
queue = { path = "../data/queue" }

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.10.0"
