[package]
name = "domain"
version = "0.1.0"
# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# workspace members
cache = { workspace = true }
database = { workspace = true }
queue = { workspace = true }
search = { workspace = true }

# external libraries
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
ulid = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
pbkdf2 = { workspace = true }
jsonwebtoken = { workspace = true }
logger = { workspace = true }

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "1.0.0"
