[package]
name = "infrastructure"
version = "0.1.0"
# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# workspace members
domain = { workspace = true }
cache = { workspace = true }
database = { workspace = true }
queue = { workspace = true }
search = { workspace = true }

# external libraries
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "1.0.0"
