[package]
name = "cache"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
repository = "https://github.com/kumanote/help-desk-server"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.22", features = ["r2d2"] }
r2d2 = "0.8.8"
chrono = "0.4.23"

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.10.0"
