[package]
name = "agent-rest-server"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
repository = "https://github.com/kumanote/help-desk-server"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = "0.4.23"
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.4", features = ["headers", "multipart", "macros"] }
axum-client-ip = "0.3.1"
tower-http = { version = "0.3", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.17.0"
internationalization = "0.0.3"

agent-rest-config = { path = "../../config/agent-rest" }
domain = { path = "../../domain" }
infrastructure = { path = "../../infrastructure" }
cache = { path = "../../data/cache" }
database = { path = "../../data/database" }
queue = { path = "../../data/queue" }

[dev-dependencies]
