[package]
name = "line-webhook-server"
version = "0.1.0"
# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# workspace members
line-webhook-config = { workspace = true }
infrastructure = { workspace = true }
domain = { workspace = true }
queue = { workspace = true }
line = { workspace = true }

# external libraries
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
axum-client-ip = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
dotenv = "0.15.0"
